--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: 阿梁
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: 做最真实的自己
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -85,4 +85,5 @@ exclude:
   - README.md
   - CNAME
 
-theme: jekyll-theme-slate
+#theme: jekyll-theme-slate
+ theme: minimal-mistakes-jekyll
